--- a/popup.html
+++ b/popup.html
@@ -27,8 +27,16 @@
                 </label>
                 <p><b>Disable NNN Block :/</b></p>
             </div>
+
+            <div style="padding: 5px; text-align: center;">
+    <p style="margin: 0 0 5px 0;">API Credentials</p>
+    <input type="password" id="api_creds_input" placeholder="Paste full API string here" style="width: 90%; margin-bottom: 5px;">
+    <button id="save_creds_btn" style="width: 95%;">Save Credentials</button>
+</div>
+        <hr>
+
             <h2 id="infobox"></h2>
-            <div id="creditsdiv"><p id="creditspar"><b>Made with 💕 by <a href="https://github.com/Thetechacker" target="_blank">Thetechacker</a> & <a href="https://github.com/luainjector" target="_blank">lua injector</a> ;3</b></p></div>
+            <div id="creditsdiv"><p id="creditspar"><b>Edited By: <a href="https://github.com/carelesswhisp" target="_blank">Purple Haired Shorty</a> & OG by <a href="https://github.com/Thetechacker" target="_blank">Thetechacker</a> & <a href="https://github.com/luainjector" target="_blank">lua injector</a> ;3</b></p></div>
         </center>
     </body>
     <script src="main.js"></script>
